# src/main/java/com/fooddelivery/chat/dto/CreateSessionRequest.java
@@ -1,9 +1,8 @@
 package com.fooddelivery.chat.dto;
 
-import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotEmpty;
-import java.util.List;@lombok.AllArgsConstructor
+@com.fasterxml.jackson.annotation.JsonIgnoreProperties(ignoreUnknown = true)
+@lombok.AllArgsConstructor
 @lombok.NoArgsConstructor
 @lombok.Data
 @lombok.Builder
@@ -13,9 +12,4 @@ public class CreateSessionRequest {
     @NotBlank
     @com.fasterxml.jackson.annotation.JsonProperty(required = true)
     private String orderId;
-    @NotEmpty
-    @Valid
-    private List<ParticipantDto> participants;
-
-
 }
